# esp32_build_as_library

./: .gitignore  .gitmodules  CMakeLists.txt  build-esp32.sh  install-prerequisites.sh  notes_going_forward.md  readme_if_returning_after_a_while.md  run_tests.sh  sdkconfig
external_components/: CMakeLists.txt  Kconfig  sdkconfig.h
external_components/esp-idf-custom-cmakelists/: build_version.cmake  esp-idf-custom-cmakelists-notes.md  esp_common.cmake  esp_event.cmake  esp_hw_support.cmake  esp_log.cmake  esp_system.cmake  freertos.cmake  heap.cmake  kconfig_setup.cmake  spi_flash.cmake
lib/: CMakeLists.txt
lib/camera/: CMakeLists.txt  pixel_storer.cc  pixel_storer.hpp  pixel_storer_test.cc
lib/ov7670/: CMakeLists.txt  README.md  configurations.hpp  ov7670chip.cpp  ov7670chip.hpp
src/: main.c
